--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,137 +1,172 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import { Picture } from '@astrojs/image/components'
-import img1 from '../images/img1.png'
-import img2 from '../images/img2.png'
+import img1 from '../images/nemesisAI.png'
+import img2 from '../images/mealApp.png'
 import img3 from '../images/img3.png'
 import img4 from '../images/img4.png'
 ---
 
 <Layout title='Welcome to Astro.'>
-  <main class='mt-24 mx-8'>
-    <div class='mb-24'>
+  <main class='mt-32 xs:mt-40 sm:mt-52 w-11/12 max-w-3xl mx-auto px-4'>
+    <div
+      class='w-48 xs:w-60 sm:w-72 h-4 bg-red-500 absolute top-20 xs:top-24 sm:top-28 left-0 opacity-30'
+    >
+    </div>
+    <div
+      class='absolute top-16 xs:top-20 sm:top-24 left-24 xs:left-40 sm:left-44'
+    >
+      Links
+    </div>
+    <div class='mb-32'>
       <h1 class='mb-8 text-3xl font-bold'>A title</h1>
-      <p class='mb-6'>
+      <p class='mb-6 max-w-lg'>
         Egestas rhoncus egestas gravida rhoncus amet ac lobortis sit. Malesuada
         accumsan sagittis tincidunt lectus.
       </p>
-      <p>
+      <p class='max-w-lg'>
         Malesuada accumsan sagittis tincidunt lectus. Aliquet sed nec aenean
         placerat volutpat ut. Ipsum etiam aliquam facilisis et eget sed. Gravida
         congue vitae laoreet non faucibus ultricies.
       </p>
     </div>
 
-    <div class='mb-24'>
-      <h2 class='mb-8 text-2xl font-bold'>Vel mattis</h2>
-      <p class='mb-6'>
+    <div class='mb-32'>
+      <h2 class='mb-8 text-2xl font-bold'>My Skills</h2>
+      <p class='mb-6 max-w-lg'>
         Curabitur convallis, turpis et lacinia lobortis, arcu eros elementum
         justo, a vehicula tortor lorem nec dui. Morbi nec imperdiet ante.
       </p>
 
       <!-- I know there is a way to do thirds for these that has better balance -->
       <ul class='flex flex-wrap text-sm font-medium uppercase'>
-        <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-100'>Aliquam</li>
-        <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-200'>Facillisis</li>
-        <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-200'>Laoreet</li>
-        <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-300'>Faucibus</li>
+        <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-100'>Javascript</li>
+        <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-200'>React</li>
+        <li
+          class='basis-1/2 xs:basis-1/3 py-3 text-orange-200 xs:text-orange-300'
+        >
+          Laoreet
+        </li>
+        <li
+          class='basis-1/2 xs:basis-1/3 py-3 text-orange-300 xs:text-orange-200'
+        >
+          Faucibus
+        </li>
         <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-300'>Arcu turpis</li>
         <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-400'>Sagittis</li>
       </ul>
     </div>
 
-    <div class='mb-24'>
-      <h2 class='mb-6 text-2xl font-bold'>Donec rutrum</h2>
-      <p class='mb-16'>
+    <div class='mb-32'>
+      <h2 class='mb-6 text-2xl font-bold'>Featured Projects</h2>
+      <p class='mb-16 max-w-lg'>
         Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
         inceptos himenaeos. Pellentesque vel gravida dui.
       </p>
 
-      <div class='mb-16'>
-        <h3 class='mb-4 text-xl font-medium'>Etiam rhoncus</h3>
-        <p class='mb-4'>
-          Praesent rhoncus orci vitae venenatis finibus. Nunc vel gravida nisl.
-        </p>
-        <Picture
-          src={img1}
-          widths={[600]}
-          alt='placeholder'
-          aspectRatio='3:2'
-          sizes='(max-width: 800px) 100vw, 800px'
-          class='mb-4'
-        />
-        <a href='#' class='mb-4 text-sm font-bold uppercase'
-          >Nulla efficitur &rsaquo;</a
-        >
+      <!-- Picture sizes, widths, ratio, all placeholders for now -->
+      <div class='mb-24 flex flex-wrap'>
+        <div class='mb-4 sm:basis-3/5 pr-8'>
+          <h3 class='mb-4 text-xl font-medium'>Nemesis AI</h3>
+          <p class='mb-4 md:mb-8'>
+            Praesent rhoncus orci vitae venenatis finibus. Nunc vel gravida
+            nisl.
+          </p>
+          <a href='#' class='text-sm font-bold uppercase'
+            >Nulla efficitur &rsaquo;</a
+          >
+        </div>
+        <div class='sm:basis-2/5'>
+          <Picture
+            src={img1}
+            widths={[600]}
+            alt='nemesis-ai-screenshot'
+            aspectRatio='3:2'
+            sizes='(max-width: 800px) 100vw, 800px'
+            class='rounded-xl drop-shadow-[0_12px_20px_rgba(28,30,33,0.9)]'
+          />
+        </div>
       </div>
 
-      <div class='mb-16'>
-        <h3 class='mb-4 text-xl font-medium'>Nunc tempus mi</h3>
-        <p class='mb-4'>
-          Sed dui mi, vestibulum sit amet dictum sit amet, aliquam at ante.
-        </p>
-        <Picture
-          src={img2}
-          widths={[600]}
-          alt='placeholder'
-          aspectRatio='3:2'
-          sizes='(max-width: 800px) 100vw, 800px'
-          class='mb-4'
-        />
-        <a href='#' class='mb-4 text-sm font-bold uppercase'
-          >Nulla efficitur &rsaquo;</a
-        >
+      <div class='mb-24 flex flex-wrap'>
+        <div class='mb-4 sm:basis-3/5 pr-8'>
+          <h3 class='mb-4 text-xl font-medium'>Meal app</h3>
+          <p class='mb-4 md:mb-8'>
+            Sed dui mi, vestibulum sit amet dictum sit amet, aliquam at ante.
+          </p>
+          <a href='#' class='text-sm font-bold uppercase'
+            >Nulla efficitur &rsaquo;</a
+          >
+        </div>
+        <div class='sm:basis-2/5'>
+          <Picture
+            src={img2}
+            widths={[600]}
+            alt='placeholder'
+            aspectRatio='3:2'
+            sizes='(max-width: 800px) 100vw, 800px'
+            class='rounded-xl drop-shadow-[0_12px_20px_rgba(28,30,33,0.9)]'
+          />
+        </div>
       </div>
 
-      <div class='mb-16'>
-        <h3 class='mb-4 text-xl font-medium'>Mauris sit amet</h3>
-        <p class='mb-4'>
-          Nunc vel gravida nisl. Vestibulum ut lectus eu odio egestas tempor.
-        </p>
-
-        <!-- Picture sizes, widths, ratio, all placeholders for now -->
-        <Picture
-          src={img3}
-          widths={[600]}
-          alt='placeholder'
-          aspectRatio='3:2'
-          sizes='(max-width: 800px) 100vw, 800px'
-          class='mb-4'
-        />
-        <a href='#' class='mb-4 text-sm font-bold uppercase'
-          >Nulla efficitur &rsaquo;</a
-        >
+      <div class='mb-24 flex flex-wrap'>
+        <div class='mb-4 sm:basis-3/5 pr-8'>
+          <h3 class='mb-4 text-xl font-medium'>Mauris sit amet</h3>
+          <p class='mb-4 md:mb-8'>
+            Nunc vel gravida nisl. Vestibulum ut lectus eu odio egestas tempor.
+          </p>
+          <a href='#' class='text-sm font-bold uppercase'
+            >Nulla efficitur &rsaquo;</a
+          >
+        </div>
+        <div class='sm:basis-2/5'>
+          <Picture
+            src={img3}
+            widths={[600]}
+            alt='placeholder'
+            aspectRatio='3:2'
+            sizes='(max-width: 800px) 100vw, 800px'
+            class='rounded-xl drop-shadow-[0_12px_20px_rgba(28,30,33,0.9)]'
+          />
+        </div>
       </div>
 
-      <div class='mb-16'>
-        <h3 class='mb-4 text-xl font-medium'>Rutrum ac lectus quis</h3>
-        <p class='mb-4'>
-          Sed posuere tortor a ex dapibus, non hendrerit sapien pretium.
-        </p>
-        <Picture
-          src={img4}
-          widths={[600]}
-          alt='placeholder'
-          aspectRatio='3:2'
-          sizes='(max-width: 800px) 100vw, 800px'
-          class='mb-4'
-        />
-        <a href='#' class='mb-4 text-sm font-bold uppercase'
-          >Nulla efficitur &rsaquo;</a
-        >
+      <div class='mb-24 flex flex-wrap'>
+        <div class='mb-4 sm:basis-3/5 pr-8'>
+          <h3 class='mb-4 text-xl font-medium'>Rutrum ac lectus quis</h3>
+          <p class='mb-4 md:mb-8'>
+            Sed posuere tortor a ex dapibus, non hendrerit sapien pretium.
+          </p>
+          <a href='#' class='text-sm font-bold uppercase'
+            >Nulla efficitur &rsaquo;</a
+          >
+        </div>
+        <div class='sm:basis-2/5'>
+          <Picture
+            src={img4}
+            widths={[600]}
+            alt='placeholder'
+            aspectRatio='3:2'
+            sizes='(max-width: 800px) 100vw, 800px'
+            class='rounded-xl drop-shadow-[0_12px_20px_rgba(28,30,33,0.9)]'
+          />
+        </div>
       </div>
     </div>
 
-    <div class='mb-24'>
+    <div class='mb-40'>
       <h2 class='mb-6 text-2xl font-bold'>Sed pretium tellus quam</h2>
-      <p class='mb-6'>
+      <p class='mb-6 max-w-md'>
         Aenean nibh enim, efficitur ac mauris ac, pretium vestibulum dolor.
         Vestibulum dictum ipsum.
       </p>
-      <a href='#' class='text-sm font-bold uppercase'>Nunc vel gravida nisl</a>
+      <a href='#' class='text-sm font-bold uppercase border-b border-b-text'
+        >Nunc vel gravida nisl</a
+      >
     </div>
 
-    <div class='flex justify-end'>
+    <div class='flex justify-end mb-8'>
       <a href='#' class='ml-6'>eleifend</a>
       <a href='#' class='ml-6'>velit</a>
       <a href='#' class='ml-6'>suspendisse</a>
