--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,9 @@ interface Props {
 }
 
 const { title } = Astro.props
+
+import { Image } from '@astrojs/image/components'
+import logo from '../images/logo.svg'
 ---
 
 <!DOCTYPE html>
@@ -17,6 +20,12 @@ const { title } = Astro.props
     <title>{title}</title>
   </head>
   <body class='bg-background text-text leading-7'>
-    <slot />
+    <main class='mt-8 w-11/12 max-w-3xl mx-auto px-4'>
+      <!-- <main class='mt-32 xs:mt-40 sm:mt-52 w-11/12 max-w-3xl mx-auto px-4'> -->
+      <a href='/'>
+        <Image alt='' src={logo} width={32} height={32} class='mb-12' />
+      </a>
+      <slot />
+    </main>
   </body>
 </html>
