Add Section component, styling

--- a/src/pages/meal-app.astro
+++ b/src/pages/meal-app.astro
@@ -2,7 +2,7 @@
 import { Picture } from '@astrojs/image/components'
 
 import Layout from '../layouts/Layout.astro'
-import img1 from '../images/meal-app/1.png'
+import img1 from '../images/meal-app/thumbnail.jpg'
 ---
 
 <Layout title='Meal app | Laura Cleveland'>
