--- a/src/pages/nemesis-ai.astro
+++ b/src/pages/nemesis-ai.astro
@@ -1,7 +1,7 @@
 ---
 import { Picture } from '@astrojs/image/components'
 import Layout from '../layouts/Layout.astro'
-import screenshotFullWithAnswer from '../images/nemesis-ai/screenshot-full-with-answer.png'
+import screenshotFullWithAnswer from '../images/nemesis-ai/thumbnail.jpg'
 ---
 
 <Layout title='Nemesis AI | Laura Cleveland'>
