--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -12,9 +12,9 @@ const { title, description, image, url } = Astro.props
 ---
 
 <!-- Picture sizes, widths, ratio, all placeholders for now -->
-<div class='mb-24 flex flex-wrap'>
+<div class='mb-24 last:mb-0 flex flex-wrap'>
   <div class='mb-4 sm:basis-3/5 pr-8'>
-    <h3 class='mb-4 text-xl font-medium'>{title}</h3>
+    <h3 class='mb-4 text-xl font-semibold'>{title}</h3>
     <p class='mb-4 md:mb-8'>
       {description}
     </p>
