--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,11 @@
 ---
+import '@fontsource/dm-sans/600.css'
+import '@fontsource/dm-sans/400.css'
 interface Props {
   title: string
 }
 
 const { title } = Astro.props
-
-import { Image } from '@astrojs/image/components'
-import logo from '../images/logo.svg'
 ---
 
 <!DOCTYPE html>
@@ -19,13 +18,13 @@ import logo from '../images/logo.svg'
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class='bg-background text-text leading-7'>
-    <main class='mt-8 w-11/12 max-w-3xl mx-auto px-4'>
-      <!-- <main class='mt-32 xs:mt-40 sm:mt-52 w-11/12 max-w-3xl mx-auto px-4'> -->
-      <a href='/'>
-        <Image alt='' src={logo} width={32} height={32} class='mb-12' />
-      </a>
-      <slot />
-    </main>
+  <body class='bg-background-light text-text leading-8'>
+    <!-- <main class='mt-8 w-11/12 max-w-3xl mx-auto px-4'> -->
+    <!-- <main class='mt-32 xs:mt-40 sm:mt-52 w-11/12 max-w-3xl mx-auto px-4'> -->
+    <!-- <a href='/'> -->
+    <!-- <Image alt='' src={logo} width={32} height={32} class='mb-12' /> -->
+    <!-- </a> -->
+    <slot />
+    <!-- </main> -->
   </body>
 </html>
