--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro'
+import Section from '../components/Section.astro'
 import Project from '../components/Project.astro'
 import nemesisAiThumbnail from '../images/nemesis-ai/thumbnail.jpg'
 import mealAppThumbnail from '../images/meal-app/thumbnail.jpg'
@@ -8,33 +9,34 @@ import thumbnail from '../images/terrain-blog/thumbnail.png'
 ---
 
 <Layout title='Laura Cleveland'>
-  <!-- <div
-    class='w-48 xs:w-60 sm:w-72 h-4 bg-red-500 absolute top-20 xs:top-24 sm:top-28 left-0 opacity-30'
-  >
-  </div>
   <div
-    class='absolute top-16 xs:top-20 sm:top-24 left-24 xs:left-40 sm:left-44'
+    class='pt-56 pb-24 pl-12 bg-gradient-to-br from-gradient-start to-gradient-end'
   >
-    Links
-  </div> -->
-  <div class='mb-32'>
-    <h1 class='mb-8 text-3xl font-bold'>Laura Cleveland</h1>
-    <p class='mb-6 max-w-lg'>
-      Voluptate est labore voluptate est ut esse occaecat deserunt excepteur
-      laboris. Nostrud nulla eu laboris veniam adipisicing fugiat pariatur est
-      voluptate consequat occaecat nostrud aliqua. Adipisicing aliquip tempor
-      tempor laborum ex ut aliquip nulla nisi ad pariatur.
-    </p>
-    <p class='max-w-lg'>
-      Dolor dolor veniam labore non aliquip ipsum sit minim anim id. Aliqua
-      fugiat mollit aliqua officia ullamco aute officia quis ea culpa. Anim
-      labore sint consequat non pariatur ad duis proident veniam dolore irure.
-    </p>
+    <Section>
+      <h1 class='text-3xl xs:text-4xl sm:text-5xl font-semibold'>
+        <span class='block text-accent-1'>Laura</span>
+        <span class='block text-accent-2'>Cleveland</span>
+      </h1>
+    </Section>
   </div>
 
-  <div class='mb-32'>
-    <h2 class='mb-8 text-2xl font-bold'>My Skills</h2>
-    <p class='mb-6 max-w-lg'>
+  <div class='bg-background-dark'>
+    <Section>
+      <p class='mb-10 max-w-lg'>
+        Voluptate est labore voluptate est ut esse occaecat deserunt excepteur
+        laboris. Nostrud nulla eu laboris veniam adipisicing fugiat pariatur est
+        voluptate consequat occaecat nostrud aliqua.
+      </p>
+      <p class='max-w-lg'>
+        Dolor dolor veniam labore non aliquip ipsum sit minim anim id. Aliqua
+        fugiat mollit aliqua officia ullamco aute officia quis ea culpa.
+      </p>
+    </Section>
+  </div>
+
+  <Section>
+    <h2 class='mb-10 text-2xl font-bold'>My Skills</h2>
+    <p class='mb-10 max-w-lg'>
       Nisi proident consectetur adipisicing fugiat culpa veniam laboris. Quis
       magna id est sit nisi officia nisi duis tempor amet anim cupidatat
       reprehenderit. Nisi eu amet mollit ad dolore excepteur sunt qui.
@@ -57,9 +59,9 @@ import thumbnail from '../images/terrain-blog/thumbnail.png'
       <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-300'>Arcu turpis</li>
       <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-400'>Sagittis</li>
     </ul>
-  </div>
+  </Section>
 
-  <div class='mb-32'>
+  <Section>
     <h2 class='mb-6 text-2xl font-bold'>Featured Projects</h2>
     <p class='mb-16 max-w-lg'>
       Nulla do nisi ipsum duis ut qui aliquip consectetur veniam dolor. Sunt
@@ -96,22 +98,22 @@ import thumbnail from '../images/terrain-blog/thumbnail.png'
       image={thumbnail}
       url='#'
     />
+  </Section>
 
-    <div class='mb-40'>
-      <h2 class='mb-6 text-2xl font-bold'>Get in touch</h2>
-      <p class='mb-6 max-w-md'>
-        Anim Lorem et esse sunt duis commodo culpa exercitation est pariatur
-        Lorem qui mollit adipisicing.
-      </p>
-      <a href='#' class='text-sm font-bold uppercase border-b border-b-text'
-        >Nunc vel gravida nisl</a
-      >
-    </div>
+  <Section>
+    <h2 class='mb-6 text-2xl font-bold'>Get in touch</h2>
+    <p class='mb-6 max-w-md'>
+      Anim Lorem et esse sunt duis commodo culpa exercitation est pariatur Lorem
+      qui mollit adipisicing.
+    </p>
+    <a href='#' class='text-sm font-bold uppercase border-b border-b-text'
+      >Nunc vel gravida nisl</a
+    >
+  </Section>
 
-    <div class='flex justify-end mb-8'>
-      <a href='#' class='ml-6'>github</a>
-      <a href='#' class='ml-6'>twitter</a>
-      <a href='#' class='ml-6'>something else?</a>
-    </div>
+  <div class='flex justify-end mt-12 mb-8 pr-10'>
+    <a href='#' class='ml-6'>github</a>
+    <a href='#' class='ml-6'>twitter</a>
+    <a href='#' class='ml-6'>linkedin</a>
   </div>
 </Layout>
